hphp/test/zend/bad/ext/standard/tests/general_functions/bug43293_2.php
<?php
ini_set('register_argc_argv', Off);

$argv = array(true, false);
var_dump(getopt("abcd"));
?>